Revision history for Dist-Zilla-Plugins-CJM

4.07   NOT
	Dist::Zilla::Plugin::MakeMaker::Custom
	Dist::Zilla::Plugin::ModuleBuild::Custom
	  - fix typo in documentation

4.06   January 2, 2012
	Dist::Zilla::Plugin::RecommendedPrereqs
	  - use CPAN::Meta::Requirements (new name of Version::Requirements)

4.05   December 21, 2011
	Dist::Zilla::Plugin::RecommendedPrereqs
	  - Filter runtime recommendations out of test recommendations

4.04   December 12, 2011
	Dist::Zilla::Plugin::Test::PrereqsFromMeta
	  - New plugin

4.03   November 11, 2011
	Dist::Zilla::Plugin::GitVersionCheckCJM
	  - Add :IncModules & :ExecFiles to default finders

	Dist::Zilla::Plugin::MakeMaker::Custom
	  - New plugin

	Dist::Zilla::Role::HashDumper
	  - New role

4.02   November 3, 2011
	- Fixed the bogus failures in gitvercheck.t
	- No changes to plugins

4.01   November 2, 2011
	- Fixed buggy diagnostics in gitvercheck.t
	- No changes to plugins

4.00   November 1, 2011
	Dist::Zilla::Plugin::RecommendedPrereqs
	  - New plugin

	Dist::Zilla::Plugin::TemplateCJM
	  - Add changelog_re parameter

	- Tests now use Test::DZil

3.05   May 5, 2011
	Dist::Zilla::Plugin::GitVersionCheckCJM
	  - Log more information in debug mode
	  - Tests now output the log on failure

	Dist::Zilla::Plugin::ModuleBuild::Custom
	  - Added get_default method

	Dist::Zilla::Plugin::TemplateCJM
	  - Fix dependency_list to handle no dependencies

3.04   December 20, 2010
	Dist::Zilla::Role::ModuleInfo
	  - Use Module::Metadata instead of Module::Build::ModuleInfo
	  - Locally reset $/ $, $\ to default values (just in case)

	Dist::Zilla::Plugin::TemplateCJM
	  - Updated docs to talk about Module::Metadata

3.03   December 7, 2010
	Dist::Zilla::Plugin::Metadata
	  - New plugin

	Dist::Zilla::Plugin::TemplateCJM
	  - Only process comments that contain a {{ }} pair.
	    Text::Template breaks on strings that have the closing
	    delimiter without the opening one.

3.02   November 11, 2010