@@ -29,4 +29,4 @@ skip = ^Dist::Zilla::Plugin::ModuleBuild$
 skip = ^Dist::Zilla::Role::(?:BeforeRelease|FileFinderUser|FileMunger|FilePruner|InstallTool|MetaProvider|PrereqSource|Releaser|TextTemplate|VersionProvider)$
 
 [Prereqs]
-Dist::Zilla               = 4 ; more than a year old now
+Dist::Zilla = 4.300009 ; improved MakeMaker subclassing
