@@ -31,6 +31,7 @@ will help catch errors in your templates.
 
 use Moose;
 use Moose::Autobox;
+use Dist::Zilla::Plugin::MakeMaker 4.300009; # improved subclassing
 extends 'Dist::Zilla::Plugin::MakeMaker';
 with qw(Dist::Zilla::Role::FilePruner
         Dist::Zilla::Role::HashDumper);
@@ -39,6 +40,15 @@ with qw(Dist::Zilla::Role::FilePruner
 # so we want delimiters that look like comments:
 has '+delim' => (
   default  => sub { [ '##{', '##}' ] },
+);
+
+# Need to cache write_makefile_args for the get_default method
+has _mmc_write_makefile_args => (
+  is       => 'ro',
+  isa      => 'HashRef',
+  lazy     => 1,
+  init_arg => undef,
+  builder  => 'write_makefile_args',
 );
 
 # Get rid of any META.yml we may have picked up from MakeMaker:
@@ -93,43 +103,9 @@ sub get_default
 {
   my $self = shift;
 
-  return $self->extract_keys(WriteMakefile => $self->__write_makefile_args, @_);
+  return $self->extract_keys(WriteMakefile => $self->_mmc_write_makefile_args,
+                             @_);
 } # end get_default
-
-has _mmc_running_parent_setup => (
-  is   => 'rw',
-  init_arg  => undef,
-);
-
-has _mmc_share_dir_block => (
-  is        => 'rw',
-  isa       => 'ArrayRef[Str]',
-  init_arg  => undef,
-);
-
-has _mmc_perl_prereq => (
-  is        => 'rw',
-  isa       => 'Maybe[Str]',
-  init_arg  => undef,
-);
-
-# Nasty hack to collect the parameters generated by MakeMaker:
-around fill_in_string => sub {
-  my $orig = shift;
-  my $self = shift;
-
-  if ($self->_mmc_running_parent_setup) {
-    my $data = $_[1];
-    $self->_mmc_share_dir_block($data->{share_dir_block})
-        if exists $data->{share_dir_block};
-    $self->_mmc_perl_prereq(${ $data->{perl_prereq} })
-        if exists $data->{perl_prereq};
-
-    return '';
-  } else {
-    $self->$orig(@_);
-  }
-};
 
 sub add_file {}                 # Don't let parent class add any files
 
@@ -138,12 +114,12 @@ around setup_installer => sub {
   my $orig = shift;
   my $self = shift;
 
-  $self->_mmc_running_parent_setup(1);
-  $self->$orig(@_);
-  $self->_mmc_running_parent_setup(0);
-
   my $file = $self->zilla->files->grep(sub { $_->name eq 'Makefile.PL' })->head
       or $self->log_fatal("No Makefile.PL found in dist");
+
+  my $write_makefile_args = $self->_mmc_write_makefile_args;
+  my $perl_prereq = $write_makefile_args->{MIN_PERL_VERSION};
+  my $share_dir_code = $self->share_dir_code;
 
   # Process Makefile.PL through Text::Template:
   my %data = (
@@ -152,9 +128,13 @@ around setup_installer => sub {
      plugin  => \$self,
      version => $self->zilla->version,
      zilla   => \$self->zilla,
+     default_args    => $write_makefile_args,
      eumm_version    => \($self->eumm_version),
-     perl_prereq     => \($self->_mmc_perl_prereq),
-     share_dir_block => $self->_mmc_share_dir_block,
+     perl_prereq     => \$perl_prereq,
+     share_dir_code  => $share_dir_code,
+     # Recreate share_dir_block for backwards compatibility:
+     share_dir_block => [ $share_dir_code->{preamble}  || '',
+                          $share_dir_code->{postamble} || '' ],
   );
 
   # The STRICT option hasn't been implemented in a released version of
@@ -199,14 +179,14 @@ In your F<Makefile.PL>:
 
   use ExtUtils::MakeMaker;
 
-  ##{ $share_dir_block[0] ##}
+  ##{ $share_dir_code{preamble} || '' ##}
 
   WriteMakefile(
     NAME => "My::Module",
   ##{ $plugin->get_prereqs ##}
   );
 
-  ##{ $share_dir_block[1] ##}
+  ##{ $share_dir_code{postamble} || '' ##}
 
 Of course, your F<Makefile.PL> should be more complex than that, or you
 don't need this plugin.
@@ -237,6 +217,11 @@ The template may use the following variables:
 
 =over
 
+=item C<%default_args>
+
+The hash of arguments for WriteMakefile generated by the normal
+MakeMaker plugin.
+
 =item C<$dist>
 
 The name of the distribution.
@@ -246,26 +231,32 @@ The name of the distribution.
 The minimum version of ExtUtils::MakeMaker required
 (from the C<eumm_version> attribute of this plugin).
 
-=item C<$meta>
+=item C<%meta>
 
 The hash of metadata (in META 2 format) that will be stored in F<META.json>.
 
 =item C<$perl_prereq>
 
 The minimum version of Perl required (from the prerequisites in the metadata).
-May be C<undef>.
+May be C<undef>.  Equivalent to C<$default_args{MIN_PERL_VERSION}>.
 
 =item C<$plugin>
 
 The MakeMaker::Custom object that is processing the template.
 
-=item C<@share_dir_block>
+=item C<%share_dir_code>
 
-An array of two strings containing the code for loading
+A hash of strings containing the code for loading
 C<File::ShareDir::Install> (if it's used by this dist).  Put
-S<C<##{ $share_dir_block[0] ##}>> after the S<C<use ExtUtils::MakeMaker>>
-line, and put S<C<##{ $share_dir_block[1] ##}>> after the C<WriteMakefile>
-call.
+S<C<##{ $share_dir_code{preamble} || '' ##}>> after the
+S<C<use ExtUtils::MakeMaker>> line, and put
+S<C<##{ $share_dir_code{postamble} || '' ##}>> after the C<WriteMakefile>
+call.  (You can omit the S<C<|| ''>> if you're sure the dist is using
+File::ShareDir.
+
+For backwards compatibility, this code is also available in the array
+C<@share_dir_block>, but you should update your templates to use
+C<%share_dir_code> instead.
 
 =item C<$version>
 
