@@ -2,6 +2,9 @@ Revision history for Dist-Zilla-Plugins-CJM
 
 4.07   NOT
 	Dist::Zilla::Plugin::MakeMaker::Custom
+	  - now compatible with (and requires) Dist::Zilla 4.300009
+	  - fix typo in documentation
+
 	Dist::Zilla::Plugin::ModuleBuild::Custom
 	  - fix typo in documentation
 
